--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -9,4 +9,23 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    /* aula 11 extra 01 */
+    position: fixed;
+    bottom: 0;
+}
+
+/* responsividade */
+
+/* tablet */
+@media (max-width: 768px) {
+    .footer {
+        font-size: 1rem; /* 16px */
+    }
+}
+
+/* mobile m */
+@media (max-width: 480px) {
+    .footer {
+        font-size: 0.75rem; /* 12px */
+    }
 }
