--- a/src/pages/Page404/Page404.module.css
+++ b/src/pages/Page404/Page404.module.css
@@ -1,5 +1,17 @@
+/* responsividade extra 02 */
+.page404 {
+    width: 100%;
+    height: 85vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    border: 1px solid red;
+}
+
 .titulo2 {
     padding-top: 2rem;
+    text-align: center; /* extra 02 */
 }
 
 .textos {
@@ -17,4 +29,16 @@
 
 .texto_vermelho {
     font-size: 1.5rem;
+}
+
+/* responsividade */
+
+/* tablet */
+@media (max-width: 768px) {
+    .texto_grande {
+        font-size: 150px;
+    }
+    .texto_vermelho {
+        font-size: 1rem;
+    }
 }
