--- a/src/pages/Sobre/Sobre.module.css
+++ b/src/pages/Sobre/Sobre.module.css
@@ -46,3 +46,27 @@
 .icones img {
     height: 50px;
 }
+
+/* responsividade extra 02 */
+/* tablet */
+@media (max-width: 768px) {
+    .bio {
+        flex-direction: column;
+        padding-inline: 20px;
+        gap: 1rem;
+        padding-block: 40px;
+    }
+    .bio img {
+        max-width: 50%;
+    }
+}
+
+/* mobile m */
+@media (max-width: 480px) {
+    .icones {
+        gap: 0.5rem;
+    }
+    .icones img {
+        height: 40px;
+    }
+}
